--- a/src/pages/new-place/new-place.html
+++ b/src/pages/new-place/new-place.html
@@ -11,7 +11,7 @@
 <form (ngSubmit)="onAddPlace(f.value)" #f="ngForm">
   <ion-item>
     <ion-label>Title</ion-label>
-    <ion-input type="text" name="title" ngModel></ion-input>
+    <ion-input type="text" name="title" ngModel required></ion-input>
   </ion-item>
   <button ion-button block type="submit" [disabled]="!f.valid" required>Add Place</button>
 </form>
