--- a/src/pages/new-place/new-place.html
+++ b/src/pages/new-place/new-place.html
@@ -15,4 +15,17 @@
   </ion-item>
   <button ion-button block type="submit" [disabled]="!f.valid" required>Add Place</button>
 </form>
+  <ion-grid>
+    <ion-row>
+    <ion-col>
+      <button ion-button block (click)="onLocateUser()"> Locate Me</button>
+    </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+       <p>Your Location: </p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
