--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,6 +11,8 @@
 
 <ion-content padding>
  <ion-list>
-     <ion-item *ngFor="let place of places" (click)="onOpenPlace()">{{ place.title }}</ion-item>
+     <ion-item
+       *ngFor="let place of places"
+               (click)="onOpenPlace(place)">{{ place.title }}</ion-item>
  </ion-list>
 </ion-content>
