--- a/src/pages/place/place.html
+++ b/src/pages/place/place.html
@@ -7,6 +7,8 @@
 </ion-header>
 
 <ion-content padding>
-<p>It works!</p>
+  <agm-map [latitude]="lat" [longitude]="lng" [zoom]="16">
+    <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+  </agm-map>
   <button ion-button block (click)="onDismiss()">Dismiss</button>
 </ion-content>
